--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "webapi-i-challenge",
   "scripts": {
+    "start": "nodemon index.js",
     "server": "nodemon index.js"
   },
   "repository": {
@@ -11,6 +12,7 @@
     "nodemon": "^2.0.20"
   },
   "dependencies": {
+    "express": "^4.18.2",
     "knex": "^2.4.2",
     "sqlite3": "^5.1.4"
   }
